--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,9 @@ flutter:
         - asset: assets/fonts/NotoSans-Regular.ttf
         - asset: assets/fonts/NotoSans-Bold.ttf
           weight: 700
-    - family: Phosphor
+    - family: JournalIcons
       fonts:
-        - asset: assets/fonts/Phosphor.ttf
-    - family: Custom
-      fonts:
-        - asset: assets/fonts/Custom.ttf
+        - asset: assets/fonts/journal_icons.ttf
 
   assets:
-    - assets/fonts/
+    - assets/fonts/journal_icons.ttf
