--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   easy_debounce: ^2.0.0
   uuid: ^4.0.0
   intl: ^0.19.0
+  flutter_colorpicker: ^1.0.3
 
   # Optional (for modals, icons, etc.)
   flutter_hooks: ^0.20.3
